--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
     "request": "^2.88.2"
   },
   "keywords": [],
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "chai": "^4.3.7",
+    "mocha": "^10.1.0"
+  }
 }
